Fixed - Headers z index is now 1000 due to other elements overlapping it

--- a/client/styles/header.css
+++ b/client/styles/header.css
@@ -13,6 +13,7 @@ header {
   padding-right: 20px;
   position: fixed;
   top: 0;
+  z-index: 1000;
 }
 
 .headerUserInfo {
